--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/css/style.css" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="container">
             <div id="post">
             <div class="img">
-                <img src="/img/boreal-unsplash.jpg">
+                <img src="./img/boreal-unsplash.jpg">
             </div>
             </div>
             <div id="buttonscontainer">
