ajustes estilo button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             </div>
             </div>
             <div id="buttonscontainer">
-                <h2 class="btn" id="btn-m">Me gusta<span id="contadorPositivo">0</span></h2>
-                <h2 class="btn" id="btn">No me gusta<span id="contadorNegativo">0</span></h2>
+                <h2 class="btn" id="btn-m"><img class="like" src="/img/icons8-like-32.png">Me gusta<span id="contadorPositivo">0</span></h2>
+                <h2 class="btn" id="btn"><img class="unlike" src="/img/icons8-like-32.png">No me gusta<span id="contadorNegativo">0</span></h2>
             </div>    
         </div>
         <script src="/js/script.js"></script>
