--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
                 <h2 class="btn" id="btn"><img class="unlike" src="./img/icons8-like-32.png">No me gusta<span id="contadorNegativo">0</span></h2>
             </div>    
         </div>
-        <script src="./js/script.js"></script>
+        <script src="/js/script.js"></script>
     </body>
 </html>
