--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Contador de MeGustas</title>
+        <title>Contador de me gustas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./css/style.css" rel="stylesheet">
+        <script src="./js/script.js" defer></script>
     </head>
     <body>
         <div id="container">
@@ -18,6 +19,5 @@
                 <h2 class="btn" id="btn"><img class="unlike" src="./img/icons8-like-32.png">No me gusta<span id="contadorNegativo">0</span></h2>
             </div>    
         </div>
-        <script src="/js/script.js"></script>
     </body>
 </html>
